--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1>Mike Connotte</h1>
 							<p>Software Developer in training<br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							Studying at Sint Lucas.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
