--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who am I?</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#one">Who am I</a></li>
+							<li><a href="#two">What have I made</a></li>
+							<li><a href="#three">Contact me</a></li>
 						</ul>
 					</nav>
 				</div>
