--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/pic06.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>2D platformer </h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Also a project from last year and my first attempt at a 2D platformer</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
