--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<h2>2D platformer </h2>
 									<p>Also a project from last year and my first attempt at a 2D platformer</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic1.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
