--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>PONG project</h2>
+									<p>My first project of the 1st year and also my first ever experience with programming.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic2.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
