--- a/index.html
+++ b/index.html
@@ -81,39 +81,35 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Who am I</h2>
+							<p>My name is Mike Connotte and I am 20 years old. I'm an ethousiastic student that loves to learn and is always ready to help people. On this page you will find some more info about me.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Which laguages can I code in</h3>
+									<p>Currently I know the basics of HTML, C#, Java, PHP and CSS, but over the course of my education I will get to know more laguages. For example, Python and JavaScript.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Which educations have I had</h3>
+									<p>I started at middle school where I got my diploma for VMBO/TL. After that I got enrolled in the Vista College on an MBO level 3 ICT education, for which I also got my diploma. Currently I am following a Software Development education at MBO level 4 and I am now in my second year.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>What skills do I have</h3>
+									<p>I can build and fix PC's and laptops, I know how to set up and manage a server with Windows Server, I can fix cables, I know how to set up networks with various devices, I can troubleshoot and fix most issues with Windows and I keep learning new things every day.</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>What is my work experience</h3>
+									<p>The work experience I have comes from my internships. I have had 2 internships at my ICT education, the first of which was at the customer support of APG, a big insurance company in Heerlen. My second internship was at the Open University in Heerlen, where I worked at the service desk.</p>
 								</section>
+								<section>
+									<span class="icon solid major fa-link"></span>
+									<h3>How can you contact me</h3>
+									<p>If you would like to contact me you can find my contact information on the "Contact me" page.</p>
+								</section>
+
 							</div>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
@@ -158,7 +154,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">m.connotte@sintlucasedu.nl</a>
+											<a href="#">m.connotte@sintlucasedu.nl or mconnotte@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
