--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><a href="mailto:m.connotte@sintlucasedu.nl" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
@@ -154,7 +154,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">m.connotte@sintlucasedu.nl or mconnotte@gmail.com</a>
+											<a href="#">m.connotte@sintlucasedu.nl</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
