--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="mailto:m.connotte@sintlucasedu.nl" class="button submit">Send Message</a></li>
+											<li><a href="mailto:m.connotte@sintlucasedu.nl" class="button">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
