--- a/index.html
+++ b/index.html
@@ -126,18 +126,7 @@
 								<section>
 									<form method="post" action="#">
 										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
+											<a href="#" class="image"><img src="images/photo_mike.jpg" alt="" data-position="center center" /></a>
 										</div>
 										<ul class="actions">
 											<li><a href="mailto:m.connotte@sintlucasedu.nl" class="button">Send Message</a></li>
