--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 								<section>
 									<form method="post" action="#">
 										<div class="fields">
-											<a href="#" class="image"><img src="images/photo_mike.jpg" alt="" data-position="center center" /></a>
+											<img src="images/photo_mike.jpg" width="400" height="500">
 										</div>
 										<ul class="actions">
 											<li><a href="mailto:m.connotte@sintlucasedu.nl" class="button">Send Message</a></li>
