--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 								<section>
 									<form method="post" action="#">
 										<div class="fields">
-											<img src="images/photo_mike.jpg" width="400" height="600" border="#312450">
+											<img src="images/photo_mike.jpg" width="400" height="600" border: #312450>
 										</div>
 										<ul class="actions">
 											<li><a href="mailto:m.connotte@sintlucasedu.nl" class="button">Send Message</a></li>
